--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titulo</title>
+    <title>only one</title>
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    
+    <h1 id="Titulo">Only one</h1>
 </body>
 </html>
