--- a/index.html
+++ b/index.html
@@ -7,6 +7,30 @@
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    <h1 id="Titulo">Only one</h1>
+    <header>
+        <div class="accounts_container fix">
+            <a href="pages/login.html" class="login">Iniciar sesión</a>
+            <a href="pages/signup.html" class="signup fix2">Registrarse</a>                        
+        </div>
+        <h1 id="Title">ONLY ONE</h1>
+        <div class="accounts_container">
+            <a href="pages/login.html" class="login">Iniciar sesión</a>
+            <a href="pages/signup.html" class="signup">Registrarse</a>                        
+        </div>
+    </header>
+    <main>
+        <h2 class="section_title">Elige tu juego</h2>
+        <section class="games">
+            <article id="lol"><a href="pages/games/league-of-legends.html"><img src="https://static-cdn.jtvnw.net/ttv-boxart/21779-188x250.jpg" alt="league of legends" title="League of legends"><p>League of legends</p></a></article>
+            <article id="valorant">VALORANT</article>
+            <article id="gta">Grand Theft Auto V</article>
+            <article id="genshin">Genshin Impact</article>
+            <article id="counter">Counter-Strike</article>
+            <article id="minecraft">Minecraft</article>
+            <article id="fortnite">Fortnite</article>
+            <article></article>
+            <article></article>
+        </section>
+    </main>
 </body>
 </html>
