--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
     <main>
         <h2 class="section_title">Elige tu juego</h2>
         <section class="games">
-            <article id="lol"><a href="pages/games/league-of-legends.html"><img src="https://static-cdn.jtvnw.net/ttv-boxart/21779-188x250.jpg" alt="league of legends" title="League of legends"><p>League of legends</p></a></article>
-            <article id="valorant">VALORANT</article>
-            <article id="gta">Grand Theft Auto V</article>
-            <article id="genshin">Genshin Impact</article>
-            <article id="counter">Counter-Strike</article>
-            <article id="minecraft">Minecraft</article>
-            <article id="fortnite">Fortnite</article>
-            <article></article>
-            <article></article>
+            <article id="lol"><a href="pages/games/league-of-legends.html"><img src="https://static1-es.millenium.gg/articles/6/23/38/6/@/108739-lol-article_cover_bd-1.jpg" alt="league of legends" title="League of legends"><p>League of legends</p></a></article>
+            <article id="valorant"><a href="pages/games/valorant.html"><img src="https://i.blogs.es/8d13e9/valorant/1366_2000.jpg" alt="VALORANT" title="VALORANT"><p>VALORANT</p></a></article>
+            <article id="gta"><a href="pages/games/gta"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTf4Pi5zRtYUZfEx5mG3zYnoOEXW6ntx3-4RA&usqp=CAU" alt="Gta V" title="Grand Theft Auto V"><p>Grand Theft Auto V</p></a></article>
+            <article id="genshin"><a href="pages/games/genshin-impact"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcScUSPdbPppOXcv4Wu1E6Z4c0nU7zEL67UgjA&usqp=CAU" alt="Genshin Impact" title="Genshin Impact"><p>Genshin Impact</p></a></article>
+            <article id="counter"><a href="pages/games/counter-strike"><img src="https://assetsio.reedpopcdn.com/keyArt_wide.png?width=1600&height=900&fit=crop&quality=100&format=png&enable=upscale&auto=webp" alt="Counter-Strike" title="Counter-Strike"><p>Counter-Strike</p></a></article>
+            <article id="minecraft"><a href="pages/games/minecraft"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlT9UEoEO3kyF4Ii8KChhDqyAk7Ay3CH1V3Q&usqp=CAU" alt="Minecraft" title="Minecraft"><p>Minecraft</p></a></article>
+            <article id="fortnite"><a href="pages/games/fortnite"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqDIO8GupnNsopylu7LVl5mocsWOIeYmi8sw&usqp=CAU" alt="Fortnite" title="Fortnite"><p>Fortnite</p></a></article>
+
+            <article id="fortnite"><a href="pages/games/fortnite"><img src="" alt="Fortnite" title="Fortnite"><p>Fortnite</p></a></article>
+            <article id="fortnite"><a href="pages/games/fortnite"><img src="" alt="Fortnite" title="Fortnite"><p>Fortnite</p></a></article>
+
         </section>
     </main>
 </body>
