--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>only one</title>
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abyssinica+SIL&family=Alice&family=Berkshire+Swash&family=Cinzel&family=Delius&family=EB+Garamond&family=Fredericka+the+Great&family=Great+Vibes&family=Gugi&family=Henny+Penny&family=Homemade+Apple&family=IBM+Plex+Serif&family=IM+Fell+English+SC&family=Julius+Sans+One&family=La+Belle+Aurore&family=Lemonada&family=Macondo&family=Old+Standard+TT:ital@0;1&family=Pinyon+Script&family=Rubik+Marker+Hatch&family=Rubik+Microbe&family=Satisfy&family=Tangerine&family=Titillium+Web&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <div class="accounts_container fix">
+        <!-- <div class="accounts_container fix">
             <a href="pages/login.html" class="login">Iniciar sesión</a>
             <a href="pages/signup.html" class="signup fix2">Registrarse</a>                        
-        </div>
-        <h1 id="Title">ONLY ONE</h1>
+        </div> -->
+
+        <div class="title-container"><h1 id="Title">ONLY ONE</h1></div>
         <div class="accounts_container">
             <a href="pages/login.html" class="login">Iniciar sesión</a>
             <a href="pages/signup.html" class="signup">Registrarse</a>                        
@@ -31,7 +35,9 @@
 
             <article id="fortnite"><a href="pages/games/fortnite"><img src="" alt="Fortnite" title="Fortnite"><p>Fortnite</p></a></article>
             <article id="fortnite"><a href="pages/games/fortnite"><img src="" alt="Fortnite" title="Fortnite"><p>Fortnite</p></a></article>
-
+            <article id="fortnite"><a href="pages/games/fortnite"><img src="" alt="Fortnite" title="Fortnite"><p>Fortnite</p></a></article>
+            <article id="fortnite"><a href="pages/games/fortnite"><img src="" alt="Fortnite" title="Fortnite"><p>Fortnite</p></a></article>
+            <article id="fortnite"><a href="pages/games/fortnite"><img src="" alt="Fortnite" title="Fortnite"><p>Fortnite</p></a></article>
         </section>
     </main>
 </body>
