Co-authored-by: Gemdelle <Gemdelle@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -11,14 +11,9 @@
 </head>
 <body>
     <header>
-        <!-- <div class="accounts_container fix">
-            <a href="pages/login.html" class="login">Iniciar sesión</a>
-            <a href="pages/signup.html" class="signup fix2">Registrarse</a>                        
-        </div> -->
-
-        <div class="title-container"><h1 id="Title">ONLY ONE</h1></div>
+        <div class="title_container"><h1 id="Title">ONLY ONE</h1></div>
         <div class="accounts_container">
-            <a href="pages/login.html" class="login">Iniciar sesión</a>
+            <a href="pages/login.html" class="login">Iniciar sesion</a>
             <a href="pages/signup.html" class="signup">Registrarse</a>                        
         </div>
     </header>
