--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>only one</title>
     <link rel="stylesheet" href="styles/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Abyssinica+SIL&family=Alice&family=Berkshire+Swash&family=Cinzel&family=Delius&family=EB+Garamond&family=Fredericka+the+Great&family=Great+Vibes&family=Gugi&family=Henny+Penny&family=Homemade+Apple&family=IBM+Plex+Serif&family=IM+Fell+English+SC&family=Julius+Sans+One&family=La+Belle+Aurore&family=Lemonada&family=Macondo&family=Old+Standard+TT:ital@0;1&family=Pinyon+Script&family=Rubik+Marker+Hatch&family=Rubik+Microbe&family=Satisfy&family=Tangerine&family=Titillium+Web&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Abyssinica+SIL&family=Alice&family=Berkshire+Swash&family=Cinzel&family=Delius&family=EB+Garamond&family=Fredericka+the+Great&family=Great+Vibes&family=Gugi&family=Henny+Penny&family=Homemade+Apple&family=IBM+Plex+Serif&family=IM+Fell+English+SC&family=Julius+Sans+One&family=La+Belle+Aurore&family=Lemonada&family=Macondo&family=Old+Standard+TT:ital@0;1&family=Pinyon+Script&family=Rubik+Marker+Hatch&family=Rubik+Microbe&family=Satisfy&family=Tangerine&family=Titillium+Web&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
     <header>
@@ -18,22 +19,26 @@
         </div>
     </header>
     <main>
-        <h2 class="section_title">Elige tu juego</h2>
+        <h2 class="section_title animate__animated animate__jackInTheBox">Elige tu juego</h2>
         <section class="games">
             <article id="lol"><a href="pages/games/league-of-legends.html"><img src="https://static1-es.millenium.gg/articles/6/23/38/6/@/108739-lol-article_cover_bd-1.jpg" alt="league of legends" title="League of legends"><p>League of legends</p></a></article>
             <article id="valorant"><a href="pages/games/valorant.html"><img src="https://i.blogs.es/8d13e9/valorant/1366_2000.jpg" alt="VALORANT" title="VALORANT"><p>VALORANT</p></a></article>
-            <article id="gta"><a href="pages/games/gta"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTf4Pi5zRtYUZfEx5mG3zYnoOEXW6ntx3-4RA&usqp=CAU" alt="Gta V" title="Grand Theft Auto V"><p>Grand Theft Auto V</p></a></article>
-            <article id="genshin"><a href="pages/games/genshin-impact"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcScUSPdbPppOXcv4Wu1E6Z4c0nU7zEL67UgjA&usqp=CAU" alt="Genshin Impact" title="Genshin Impact"><p>Genshin Impact</p></a></article>
-            <article id="counter"><a href="pages/games/counter-strike"><img src="https://assetsio.reedpopcdn.com/keyArt_wide.png?width=1600&height=900&fit=crop&quality=100&format=png&enable=upscale&auto=webp" alt="Counter-Strike" title="Counter-Strike"><p>Counter-Strike</p></a></article>
-            <article id="minecraft"><a href="pages/games/minecraft"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlT9UEoEO3kyF4Ii8KChhDqyAk7Ay3CH1V3Q&usqp=CAU" alt="Minecraft" title="Minecraft"><p>Minecraft</p></a></article>
-            <article id="fortnite"><a href="pages/games/fortnite"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTqDIO8GupnNsopylu7LVl5mocsWOIeYmi8sw&usqp=CAU" alt="Fortnite" title="Fortnite"><p>Fortnite</p></a></article>
-
-            <article id="fortnite"><a href="pages/games/fortnite"><img src="" alt="Fortnite" title="Fortnite"><p>Fortnite</p></a></article>
-            <article id="fortnite"><a href="pages/games/fortnite"><img src="" alt="Fortnite" title="Fortnite"><p>Fortnite</p></a></article>
-            <article id="fortnite"><a href="pages/games/fortnite"><img src="" alt="Fortnite" title="Fortnite"><p>Fortnite</p></a></article>
-            <article id="fortnite"><a href="pages/games/fortnite"><img src="" alt="Fortnite" title="Fortnite"><p>Fortnite</p></a></article>
-            <article id="fortnite"><a href="pages/games/fortnite"><img src="" alt="Fortnite" title="Fortnite"><p>Fortnite</p></a></article>
+            <article id="gta"><a href="pages/games/grand-theft-auto-v.html"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTf4Pi5zRtYUZfEx5mG3zYnoOEXW6ntx3-4RA&usqp=CAU" alt="Gta V" title="Grand Theft Auto V"><p>Grand Theft Auto V</p></a></article>
+            <article id="counter"><a href="pages/games/counter-strike.html"><img src="https://assetsio.reedpopcdn.com/keyArt_wide.png?width=1600&height=900&fit=crop&quality=100&format=png&enable=upscale&auto=webp" alt="Counter-Strike" title="Counter-Strike"><p>Counter-Strike</p></a></article>
+            <article id="wow"><a href="pages/games/world-of-warcraft.html"><img src="resources/World of Warcraft.jpg" alt="World of Warcraft" title="World of Warcraft"><p>World of Warcraft</p></a></article>
+            <article id="genshin"><a href="pages/games/genshin-impact.html"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcScUSPdbPppOXcv4Wu1E6Z4c0nU7zEL67UgjA&usqp=CAU" alt="Genshin Impact" title="Genshin Impact"><p>Genshin Impact</p></a></article>
+            <article id="fortnite"><a href="pages/games/fortnite.html"><img src="https://cdn2.unrealengine.com/02-gameplay-2560x1440-0414b862efc5.jpg?h=270&quality=medium&resize=1&w=480" alt="Fortnite" title="Fortnite"><p>Fortnite</p></a></article>
+            <article id="minecraft"><a href="pages/games/minecraft.html"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlT9UEoEO3kyF4Ii8KChhDqyAk7Ay3CH1V3Q&usqp=CAU" alt="Minecraft" title="Minecraft"><p>Minecraft</p></a></article>
+            <article id="warzone"><a href="pages/games/warzone.html"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1962663/capsule_616x353.jpg?t=1692298772" alt="Call Of Duty: Warzone" title="Call Of Duty: Warzone"><p>Call Of Duty: Warzone</p></a></article>
+            <article id="fortnite"><a href="pages/games/apex-legends.html"><img src="resources/Apex Legends.jpg" alt="Apex Legends" title="Apex Legends"><p>Apex Legends</p></a></article>
+            <article id="overwatch"><a href="pages/games/overwatch.html"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQF-FO8XcO5Y_n2zdntktGjs5M6Wd2cfUZrDA&usqp=CAU" alt="Overwatch 2" title="Overwatch 2"><p>Overwatch 2</p></a></article>
+            <article id="dota"><a href="pages/games/dota.html"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSPp2OtfeeAMtdyENrQtN5G1KWjHBxZ77Ad6Q&usqp=CAU" alt="Dota 2" title="Dota 2"><p>Dota 2</p></a></article>
         </section>
     </main>
+    <footer class="footer">
+        <p><a href="contactanos">Contactanos</a><a href="https://instagram.com/maty__ldm"><img src="https://s-lol-web.op.gg/images/icon/icon-logo-instagram.svg?v=1698136448120"></a></p>
+        <p>2023 © Todos los derechos reservados</p>
+
+    </footer>
 </body>
 </html>
