--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </section>
     </main>
     <footer class="footer">
-        <p><a href="contactanos">Contactanos</a><a href="https://instagram.com/maty__ldm"><img src="https://s-lol-web.op.gg/images/icon/icon-logo-instagram.svg?v=1698136448120"></a></p>
+        <p><a href="contactanos">Contactanos</a><a href="https://instagram.com/maty__ldm" target="_blank"><img src="https://s-lol-web.op.gg/images/icon/icon-logo-instagram.svg?v=1698136448120"></a></p>
         <p>2023 © Todos los derechos reservados</p>
     </footer>
 </body>
