--- a/pages/games/league-of-legends.html
+++ b/pages/games/league-of-legends.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>only one: League of Legends</title>
+    <title>Only One: League of Legends</title>
 </head>
 <body>
-    
+    <form>
+        <ul>
+            <li></li>
+        </ul>
+    </form>
+    <!-- <h1 id="asd">eeeeeeeeeeem</h1>
+    <div id="sas"></div>
+    <script>
+        let server = prompt("Ingrese su servidor: ");
+        let nickname = prompt("Ingrese su nick de league of legends: ");
+        let discord = prompt("(opcional) Ingrese su usuario de discord: ");
+        
+        function createMessage(server, nickname, discord){
+            message = `<p> Servidor: ${server}</p> <p> nickname: ${nickname} </p><p> discord: ${discord}</p>`;
+            document.getElementById("sas").innerHTML += message;
+        }
+        createMessage(server,nickname,discord); -->
+    </script>
 </body>
 </html>
