--- a/pages/login.html
+++ b/pages/login.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="../styles/login.css">
 </head>
 <body>
-    
+    <h1>Iniciar sesion</h1>
+    <form>
+        <ul> 
+            <label for="usuario">Ingrese su usuario</label>
+            <li><input type="text" name="usuario" class="usuario"></li>
+        </ul>
+    </form>
 </body>
 </html>
