--- a/index.html
+++ b/index.html
@@ -12,27 +12,50 @@
 </head>
 <body>
     <header>
-        <div class="title_container"><h1 id="Title">ONLY ONE</h1></div>
-        <div class="accounts_container">
+        <div class="title-container"><h1 id="Title">ONLY ONE</h1></div>
+        <div class="accounts-container">
             <a href="pages/login.html" class="login">Iniciar sesion</a>
             <a href="pages/signup.html" class="signup">Registrarse</a>                        
         </div>
     </header>
     <main>
-        <h2 class="section_title animate__animated animate__jackInTheBox">Elige tu juego</h2>
+        <h2 class="section-title animate__animated animate__jackInTheBox">Elige tu juego</h2>
         <section class="games">
-            <article id="lol"><a href="pages/games/league-of-legends.html"><img src="resources/games/league of legends.webp" alt="league of legends" title="League of legends"><p>League of legends</p></a></article>
-            <article id="valorant"><a href="pages/games/valorant.html"><img src="resources/games/valorant.jpg" alt="VALORANT" title="VALORANT"><p>VALORANT</p></a></article>
-            <article id="gta"><a href="pages/games/grand-theft-auto-v.html"><img src="resources/games/gta.jpg" alt="Gta V" title="Grand Theft Auto V"><p>Grand Theft Auto V</p></a></article>
-            <article id="counter"><a href="pages/games/counter-strike.html"><img src="resources/games/counter strike.webp" alt="Counter-Strike" title="Counter-Strike"><p>Counter-Strike</p></a></article>
-            <article id="wow"><a href="pages/games/world-of-warcraft.html"><img src="resources/games/world of warcraft.jpg" alt="World of Warcraft" title="World of Warcraft"><p>World of Warcraft</p></a></article>
-            <article id="genshin"><a href="pages/games/genshin-impact.html"><img src="resources/games/genshin impact.jpg" alt="Genshin Impact" title="Genshin Impact"><p>Genshin Impact</p></a></article>
-            <article id="fortnite"><a href="pages/games/fortnite.html"><img src="resources/games/fortnite.jpg" alt="Fortnite" title="Fortnite"><p>Fortnite</p></a></article>
-            <article id="minecraft"><a href="pages/games/minecraft.html"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlT9UEoEO3kyF4Ii8KChhDqyAk7Ay3CH1V3Q&usqp=CAU" alt="Minecraft" title="Minecraft"><p>Minecraft</p></a></article>
-            <article id="warzone"><a href="pages/games/warzone.html"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1962663/capsule_616x353.jpg?t=1692298772" alt="Call Of Duty: Warzone" title="Call Of Duty: Warzone"><p>Call Of Duty: Warzone</p></a></article>
-            <article id="fortnite"><a href="pages/games/apex-legends.html"><img src="resources/games/apex legends.jpg" alt="Apex Legends" title="Apex Legends"><p>Apex Legends</p></a></article>
-            <article id="overwatch"><a href="pages/games/overwatch.html"><img src="resources/games/overwatch.jpg" alt="Overwatch 2" title="Overwatch 2"><p>Overwatch 2</p></a></article>
-            <article id="dota"><a href="pages/games/dota.html"><img src="resources/games/dota.jpg" alt="Dota 2" title="Dota 2"><p>Dota 2</p></a></article>
+            <article id="lol">
+                <a href="pages/games/league-of-legends.html"><img src="resources/games/league of legends.webp" alt="league of legends" title="League of legends"><p>League of legends</p></a>
+            </article>
+            <article id="valorant">
+                <a href="pages/games/valorant.html"><img src="resources/games/valorant.jpg" alt="VALORANT" title="VALORANT"><p>VALORANT</p></a></article>
+            <article id="gta">
+                <a href="pages/games/grand-theft-auto-v.html"><img src="resources/games/gta.jpg" alt="Gta V" title="Grand Theft Auto V"><p>Grand Theft Auto V</p></a>
+            </article>
+            <article id="counter">
+                <a href="pages/games/counter-strike.html"><img src="resources/games/counter strike.webp" alt="Counter-Strike" title="Counter-Strike"><p>Counter-Strike</p></a>
+            </article>
+            <article id="wow">
+                <a href="pages/games/world-of-warcraft.html"><img src="resources/games/world of warcraft.jpg" alt="World of Warcraft" title="World of Warcraft"><p>World of Warcraft</p></a>
+            </article>
+            <article id="genshin">
+                <a href="pages/games/genshin-impact.html"><img src="resources/games/genshin impact.jpg" alt="Genshin Impact" title="Genshin Impact"><p>Genshin Impact</p></a>
+            </article>
+            <article id="fortnite">
+                <a href="pages/games/fortnite.html"><img src="resources/games/fortnite.jpg" alt="Fortnite" title="Fortnite"><p>Fortnite</p></a>
+            </article>
+            <article id="minecraft">
+                <a href="pages/games/minecraft.html"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlT9UEoEO3kyF4Ii8KChhDqyAk7Ay3CH1V3Q&usqp=CAU" alt="Minecraft" title="Minecraft"><p>Minecraft</p></a>
+            </article>
+            <article id="warzone">
+                <a href="pages/games/warzone.html"><img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1962663/capsule_616x353.jpg?t=1692298772" alt="Call Of Duty: Warzone" title="Call Of Duty: Warzone"><p>Call Of Duty: Warzone</p></a>
+            </article>
+            <article id="fortnite">
+                <a href="pages/games/apex-legends.html"><img src="resources/games/apex legends.jpg" alt="Apex Legends" title="Apex Legends"><p>Apex Legends</p></a>
+            </article>
+            <article id="overwatch">
+                <a href="pages/games/overwatch.html"><img src="resources/games/overwatch.jpg" alt="Overwatch 2" title="Overwatch 2"><p>Overwatch 2</p></a>
+            </article>
+            <article id="dota">
+                <a href="pages/games/dota.html"><img src="resources/games/dota.jpg" alt="Dota 2" title="Dota 2"><p>Dota 2</p></a>
+            </article>
         </section>
     </main>
     <footer class="footer">
