--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@
                 </a>
             </article>
         </section>
+        <section>
+            <h2>¿Que es only one?</h2>
+            <p>
+                Only One es una pagina en la cual puedes buscar jugadores cuando a ti y a tus amigos les falte uno mas para esas partidas. La forma es simple, seleccionas el juego en cual estan tu y tus amigos, y debes llenar con tus datos de jugador, id, nivel... etc. Ademas de seleccionar el modo de juego. Y listo! ya puedes buscar ese jugador faltante. 
+                Y si tu eres el que quiere unirse a aquellos que les falte uno mas. Tambien puedes! Solo debes llenar con tus datos un mini cuestionario y tendras acceso a una lista de grupos a los cuales les faltas tu. 
+                Además, si gustas volver a buscar otro jugador, puedes registrarte y todos tus datos quedaran guardados.
+            </p>
+        </section>
     </main>
     <footer class="footer">
         <p><a href="contactanos">Contactanos</a><a href="https://instagram.com/maty__ldm" target="_blank"><img src="https://s-lol-web.op.gg/images/icon/icon-logo-instagram.svg?v=1698136448120"></a></p>
