--- a/index.html
+++ b/index.html
@@ -22,90 +22,92 @@
         <h2 class="section-title animate__animated animate__jackInTheBox">Elige tu juego</h2>
         <section class="games">
             <article id="lol">
-                <a href="pages/games/league-of-legends.html">
+                <a href="pages/games/league of legends/find-players.html">
                     <img src="resources/games/league of legends.webp" alt="league of legends" title="League of legends">
-                    <p>League of legends</p>
+                    <p class="centrado">League of legends</p>
                 </a>
             </article>
             <article id="valorant">
-                <a href="pages/games/valorant.html">
+                <a href="pages/games/valorant/find-players.html">
                     <img src="resources/games/valorant.jpg" alt="VALORANT" title="VALORANT">
-                    <p>VALORANT</p>
+                    <p class="centrado">VALORANT</p>
                 </a>
             </article>
             <article id="gta">
-                <a href="pages/games/grand-theft-auto-v.html">
+                <a href="pages/games/grand theft auto v/find-players.html">
                     <img src="resources/games/gta.jpg" alt="Gta V" title="Grand Theft Auto V">
-                    <p>Grand Theft Auto V</p>
+                    <p class="centrado">Grand Theft Auto V</p>
                 </a>
             </article>
             <article id="counter">
-                <a href="pages/games/counter-strike.html">
+                <a href="pages/games/counter strike/find-players.html">
                     <img src="resources/games/counter strike.webp" alt="Counter-Strike" title="Counter-Strike">
-                    <p>Counter-Strike</p>
+                    <p class="centrado">Counter-Strike</p>
                 </a>
             </article>
             <article id="wow">
-                <a href="pages/games/world-of-warcraft.html">
+                <a href="pages/games/world of warcraft/find-players.html">
                     <img src="resources/games/world of warcraft.jpg" alt="World of Warcraft" title="World of Warcraft">
-                    <p>World of Warcraft</p>
+                    <p class="centrado">World of Warcraft</p>
                 </a>
             </article>
             <article id="genshin">
-                <a href="pages/games/genshin-impact.html">
+                <a href="pages/games/genshin impact/find-players.html">
                     <img src="resources/games/genshin impact.jpg" alt="Genshin Impact" title="Genshin Impact">
-                    <p>Genshin Impact</p>
+                    <p class="centrado">Genshin Impact</p>
                 </a>
             </article>
             <article id="fortnite">
-                <a href="pages/games/fortnite.html">
+                <a href="pages/games/fortnite/find-players.html">
                     <img src="resources/games/fortnite.jpg" alt="Fortnite" title="Fortnite">
-                    <p>Fortnite</p>
+                    <p class="centrado">Fortnite</p>
                 </a>
             </article>
             <article id="minecraft">
-                <a href="pages/games/minecraft.html">
+                <a href="pages/games/minecraft/find-players.html">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlT9UEoEO3kyF4Ii8KChhDqyAk7Ay3CH1V3Q&usqp=CAU" alt="Minecraft" title="Minecraft">
-                    <p>Minecraft</p>
+                    <p class="centrado">Minecraft</p>
                 </a>
             </article>
             <article id="warzone">
-                <a href="pages/games/warzone.html">
+                <a href="pages/games/call of duty warzone/find-players.html">
                     <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1962663/capsule_616x353.jpg?t=1692298772" alt="Call Of Duty: Warzone" title="Call Of Duty: Warzone">
-                    <p>Call Of Duty: Warzone</p>
+                    <p class="centrado">Call Of Duty: Warzone</p>
                 </a>
             </article>
             <article id="fortnite">
-                <a href="pages/games/apex-legends.html">
+                <a href="pages/games/apex legends/find-players.html">
                     <img src="resources/games/apex legends.jpg" alt="Apex Legends" title="Apex Legends">
-                    <p>Apex Legends</p>
+                    <p class="centrado">Apex Legends</p>
                 </a>
             </article>
             <article id="overwatch">
-                <a href="pages/games/overwatch.html">
+                <a href="pages/games/overwatch 2/find-players.html">
                     <img src="resources/games/overwatch.jpg" alt="Overwatch 2" title="Overwatch 2">
-                    <p>Overwatch 2</p>
+                    <p class="centrado">Overwatch 2</p>
                 </a>
             </article>
             <article id="dota">
-                <a href="pages/games/dota.html">
+                <a href="pages/games/dota 2/find-players.html">
                     <img src="resources/games/dota.jpg" alt="Dota 2" title="Dota 2">
-                    <p>Dota 2</p>
+                    <p class="centrado">Dota 2</p>
                 </a>
             </article>
         </section>
-        <section>
-            <h2>¿Que es only one?</h2>
+        <section class="info">
+            <h2 class="info-h2">¿Que es ONLY ONE?</h2>
             <p>
-                Only One es una pagina en la cual puedes buscar jugadores cuando a ti y a tus amigos les falte uno mas para esas partidas. La forma es simple, seleccionas el juego en cual estan tu y tus amigos, y debes llenar con tus datos de jugador, id, nivel... etc. Ademas de seleccionar el modo de juego. Y listo! ya puedes buscar ese jugador faltante. 
+                Only One es una pagina en la cual puedes buscar jugadores cuando a ti y a tus amigos les falte uno mas para esas partidas. La forma es simple, seleccionas el juego el cual quieres jugar y debes llenar con tus datos de jugador, id, nivel, etc. Ademas de seleccionar el modo de juego. Y listo! ya puedes encontrar a ese jugador faltante.
+            </p>
+            <p style="margin-top: .5vw;">
                 Y si tu eres el que quiere unirse a aquellos que les falte uno mas. Tambien puedes! Solo debes llenar con tus datos un mini cuestionario y tendras acceso a una lista de grupos a los cuales les faltas tu. 
                 Además, si gustas volver a buscar otro jugador, puedes registrarte y todos tus datos quedaran guardados.
             </p>
         </section>
     </main>
     <footer class="footer">
-        <p><a href="contactanos">Contactanos</a><a href="https://instagram.com/maty__ldm" target="_blank"><img src="https://s-lol-web.op.gg/images/icon/icon-logo-instagram.svg?v=1698136448120"></a></p>
-        <p>2023 © Todos los derechos reservados</p>
+        <p class="centrado"><a href="contactanos">Contactanos</a><a href="https://instagram.com/maty__ldm" target="_blank"><img src="https://s-lol-web.op.gg/images/icon/icon-logo-instagram.svg?v=1698136448120"></a></p>
+        <p class="centrado">2023 © Todos los derechos reservados</p>
     </footer>
 </body>
 </html>
