--- a/pages/games/apex legends/find-group.html
+++ b/pages/games/apex legends/find-group.html
@@ -7,12 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Abyssinica+SIL&family=Alice&family=Berkshire+Swash&family=Cinzel&family=Delius&family=EB+Garamond&family=Fredericka+the+Great&family=Great+Vibes&family=Gugi&family=Henny+Penny&family=Homemade+Apple&family=IBM+Plex+Serif&family=IM+Fell+English+SC&family=Julius+Sans+One&family=La+Belle+Aurore&family=Lemonada&family=Macondo&family=Old+Standard+TT:ital@0;1&family=Pinyon+Script&family=Rubik+Marker+Hatch&family=Rubik+Microbe&family=Satisfy&family=Tangerine&family=Titillium+Web&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../../styles/games.css">
+    <link rel="stylesheet" href="../../../styles/games.css">
 </head>
 <body>
     <header>
         <div class="title-container">
-            <a href="../../index.html">
+            <a href="../../../index.html">
                 <h1 id="Title">ONLY ONE</h1>
             </a>
         </div>
@@ -22,12 +22,14 @@
         </div>
     </header>
     <main>
-        <button onclick="" class="find-group">
-            <p>Buscar grupo</p>
-        </button>
-        <button onclick="" class="find-players">
-            <p>Buscar jugadores</p>
-        </button>
+        <nav>
+            <a href="find-players.html" class="find-players">
+                <p>Buscar jugadores</p>
+            </a>
+            <a href="find-group.html" class="find-group">
+                <p>Buscar grupo</p>
+            </a> 
+        </nav>
     </main>
 </body>
 </html>
