--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </main>
     <footer class="footer">
         <p class="centrado"><a href="contactanos">Contactanos</a><a href="https://instagram.com/maty__ldm" target="_blank"><img src="https://s-lol-web.op.gg/images/icon/icon-logo-instagram.svg?v=1698136448120"></a></p>
-        <p class="centrado">2023 © Todos los derechos reservados</p>
+        <p class="centrado">© 2023. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
