--- a/pages/games/apex legends/find-players.html
+++ b/pages/games/apex legends/find-players.html
@@ -24,10 +24,10 @@
     <main>
         <nav>
             <a href="find-players.html" class="find-players">
-                <p>Buscar jugadores</p>
+                <h2 style="border-bottom: 1.5px lightblue solid;">Buscar jugadores</h2>
             </a>
             <a href="find-group.html" class="find-group">
-                <p>Buscar grupo</p>
+                <h2>Buscar grupo</h2>
             </a> 
         </nav>
     </main>
