--- a/pages/games/apex legends/find-group.html
+++ b/pages/games/apex legends/find-group.html
@@ -26,7 +26,7 @@
             <h2>Buscar jugadores</h2>
         </a>
         <a href="find-group.html" class="find-group">
-            <h2 style="border-bottom: 1.5px rgb(189, 173, 230) solid;">Buscar grupo</h2>
+            <h2 style="border-bottom: 1.5px lightblue solid;">Buscar grupo</h2>
         </a> 
     </nav>
     <main>
@@ -59,8 +59,8 @@
         <section class="group-container">
             <article class="groups">
                 <div> 
-                    <span>Aram</span>
-                    <span>LAS</span>
+                    <span id="Gamemode1">Aram</span>
+                    <span id="Server1">LAS</span>
                 </div>
                 <ol>
                     Integrantes:
@@ -69,10 +69,13 @@
                     <li>nombre</li>
                     <li>nombre</li>
                 </ol>
+                <p class="discord">Discord:</p>
             </article>
             <article class="groups">
-                <span>Modo de juego: </span>
-                <span>Servidor: </span>
+                <div> 
+                    <span id="Gamemode2">Aram</span>
+                    <span id="Server2">LAS</span>
+                </div>
                 <ol>
                     Integrantes:
                     <li>nombre</li>
@@ -80,10 +83,13 @@
                     <li>nombre</li>
                     <li>nombre</li>
                 </ol>
+                <p class="discord">Discord:</p>
             </article>
             <article class="groups">
-                <p>Modo de juego: </p>
-                <p>Servidor: </p>
+                <div> 
+                    <span id="Gamemode3">Aram</span>
+                    <span id="Server3">LAS</span>
+                </div>
                 <ol>
                     Integrantes:
                     <li>nombre</li>
@@ -91,10 +97,13 @@
                     <li>nombre</li>
                     <li>nombre</li>
                 </ol>
+                <p class="discord">Discord:</p>
             </article>
             <article class="groups">
-                <p>Modo de juego: </p>
-                <p>Servidor: </p>
+                <div> 
+                    <span id="Gamemode4">Aram</span>
+                    <span id="Server4">LAS</span>
+                </div>
                 <ol>
                     Integrantes:
                     <li>nombre</li>
@@ -102,10 +111,13 @@
                     <li>nombre</li>
                     <li>nombre</li>
                 </ol>
+                <p class="discord">Discord:</p>
             </article>
             <article class="groups">
-                <p>Modo de juego: </p>
-                <p>SERVIDOR: </p>
+                <div> 
+                    <span id="Gamemode5">Aram</span>
+                    <span id="Server5">LAS</span>
+                </div>
                 <ol>
                     Integrantes:
                     <li>nombre</li>
@@ -113,8 +125,10 @@
                     <li>nombre</li>
                     <li>nombre</li>
                 </ol>
+                <p class="discord">Discord:</p>
             </article>
         </section>
     </main>
+    <script src="find-group.js"></script>
 </body>
 </html>
