--- a/pages/games/league of legends/find-group.html
+++ b/pages/games/league of legends/find-group.html
@@ -26,7 +26,7 @@
             <h2>Buscar jugadores</h2>
         </a>
         <a href="find-group.html" class="find-group">
-            <h2 style="border-bottom: 1.5px lightblue solid;">Buscar grupo</h2>
+            <h2 style="border-bottom: 1.5px rgb(49, 0, 135) solid;">Buscar grupo</h2>
         </a> 
     </nav>
     <main>
