find players random names

--- a/pages/games/league of legends/find-group.html
+++ b/pages/games/league of legends/find-group.html
@@ -127,6 +127,20 @@
                 </ol>
                 <p class="discord">Discord:</p>
             </article>
+            <article class="groups">
+                <div> 
+                    <span id="Gamemode6">Aram</span>
+                    <span id="Server6">LAS</span>
+                </div>
+                <ol>
+                    Integrantes:
+                    <li>nombre</li>
+                    <li>nombre</li>
+                    <li>nombre</li>
+                    <li>nombre</li>
+                </ol>
+                <p class="discord">Discord:</p>
+            </article>
         </section>
     </main>
     <script src="find-group.js"></script>
