--- a/pages/games/league of legends/find-players.html
+++ b/pages/games/league of legends/find-players.html
@@ -61,82 +61,82 @@
                 <div> 
                     <span>asd</span>
                 </div>
-                <ol>
-                    <li>nombre</li>
-                </ol>
-                <p class="discord">Discord:</p>
+                <div class="user">
+                    nombre
+                </div>
+                <p class="discord">Discord: ...</p>
             </article>
             <article class="groups players">
                 <div> 
                     <span>asd</span>
                 </div>
-                <ol>
-                    <li>nombre</li>
-                </ol>
-                <p class="discord">Discord:</p>
+                <div class="user">
+                    nombre
+                </div>
+                <p class="discord">Discord: ...</p>
             </article>
             <article class="groups players">
                 <div> 
                     <span>asd</span>
                 </div>
-                <ol>
-                    <li>nombre</li>
-                </ol>
-                <p class="discord">Discord:</p>
+                <div class="user">
+                    nombre
+                </div>
+                <p class="discord">Discord: ...</p>
             </article>
             <article class="groups players">
                 <div> 
                     <span>asd</span>
                 </div>
-                <ol>
-                    <li>nombre</li>
-                </ol>
-                <p class="discord">Discord:</p>
+                <div class="user">
+                    nombre
+                </div>
+                <p class="discord">Discord: ...</p>
             </article>
             <article class="groups players">
                 <div> 
                     <span>asd</span>
                 </div>
-                <ol>
-                    <li>nombre</li>
-                </ol>
-                <p class="discord">Discord:</p>
+                <p class="user">
+                    nombre
+                </p>
+                <p class="discord">Discord: ...</p>
             </article>
             <article class="groups players">
                 <div> 
                     <span>asd</span>
                 </div>
-                <ol>
-                    <li>nombre</li>
-                </ol>
-                <p class="discord">Discord:</p>
+                <div class="user">
+                    nombre
+                </div>
+                <p class="discord">Discord: ...</p>
             </article>
             <article class="groups players">
                 <div> 
                     <span>asd</span>
                 </div>
-                <ol>
-                    <li>nombre</li>
-                </ol>
-                <p class="discord">Discord:</p>
+                <div class="user">
+                    nombre
+                </div>
+                <p class="discord">Discord: ...</p>
             </article>
             <article class="groups players">
                 <div> 
                     <span>asd</span>
                 </div>
-                <ol>
-                    <li>nombre</li>
-                </ol>
-                <p class="discord">Discord:</p>
+                <div class="user">
+                    nombre
+                </div>
+                <p class="discord">Discord: ...</p>
             </article>
             <article class="groups players">
                 <div> 
                     <span>asd</span>
                 </div>
-                <ol>
-                    <li>nombre</li>
-                </ol>
-                <p class="discord">Discord:</p>
+                <div class="user">
+                    nombre
+                </div>
+                <p class="discord">Discord: ...</p>
             </article>
         </section>
     </main>
