--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>Only One contact</h1>
+        <a href="../index.html"><h1>Only One contact</h1></a>
     </header>
     <main>
         <div class="contact-form">
@@ -22,7 +22,7 @@
                     <input type="text" id="nombre" name="nombre" required>
                 </div>
                 <div class="form-group">
-                    <label for="email">Correo Electrónico:</label>
+                    <label for="email">Correo Electronico:</label>
                     <input type="email" id="email" name="email" required>
                 </div>
                 <div class="form-group">
@@ -33,14 +33,14 @@
             </form>
         </div>
         <div class="contact-info">
-            <h2>Información de Contacto</h2>
+            <h2>Informacion de Contacto</h2>
             <p>Si tienes alguna pregunta o comentario, no dudes en contactarnos.</p>
-            <p>Correo Electrónico: weareonlyone@gmail.com</p>
-            <p>Teléfono: (011) 4237-6119</p>
+            <p>Correo Electronico: weareonlyone@gmail.com</p>
+            <p>Telefono: (011) 4237-6119</p>
         </div>
     </main>
     <footer>
-        <p>&copy; 2023 Página de Contacto</p>
+        <p>© 2023. Pagina de Contacto.</p>
     </footer>
 </body>
 </html>
