--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </section>
     </main>
     <footer class="footer">
-        <p class="centrado"><a href="contactanos">Contactanos</a><a href="https://instagram.com/maty__ldm" target="_blank"><img src="https://s-lol-web.op.gg/images/icon/icon-logo-instagram.svg?v=1698136448120"></a></p>
+        <p class="centrado contact"><a href="pages/contact.html">Contactanos</a><a href="https://instagram.com/maty__ldm" target="_blank"><img src="https://s-lol-web.op.gg/images/icon/icon-logo-instagram.svg?v=1698136448120"></a></p>
         <p class="centrado">© 2023. Todos los derechos reservados.</p>
     </footer>
 </body>
