--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <div class="contact-form">
-            <h2>Formulario de Contacto</h2>
+            <h2>Danos tu opinion!</h2>
             <form>
                 <div class="form-group">
                     <label for="nombre">Nombre:</label>
